--- a/image.html
+++ b/image.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./StyleSheet/style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -23,7 +23,7 @@
         <form action="https://www.google.com/search">
             <input  type="text" name="q" class="placehold">
             <input type="hidden" name="tbm" value="isch">
-            <input type="submit" value="Google Image" id="btn-search">
+            <input type="submit" value="Search Image" id="btn-search">
         </form>   
         
     </div>
