--- a/image.html
+++ b/image.html
@@ -14,17 +14,22 @@
     
     <div id="main">
         <div id="nav">
-          <div class="nav-items"><a href="https://mail.google.com/">Gmail</a></div> 
-          <div class="nav-items"><a href="./image.html">Images</a></div> 
-          <div id="icon"><i class="ri-grid-line"></i></div> 
-          <div id="dpimg"><img style="width: 48px;height: 48px;padding: 8px;" src="./images/Professional Profile Dp.jpg" alt=""></div>  
-        </div>
-        <div id="google-img"><img src="./images/google-img.png" alt=""></div>        
-        <form action="https://www.google.com/search">
-            <input  type="text" name="q" class="placehold">
-            <input type="hidden" name="tbm" value="isch">
-            <input type="submit" value="Search Image" id="btn-search">
-        </form>  
+            <a class="nav-items" href="https://mail.google.com/">Gmail</a>
+            <a class="nav-items " id="acc-dp" href="./image.html">Images</a>
+            <div id="ellips">
+             <i class="ri-more-2-fill"></i>
+             <i class="ri-more-2-fill"></i>
+             <i class="ri-more-2-fill"></i>
+            </div>
+            <img id="dpimg" style="width: 48px;height: 48px;padding: 8px;" src="./images/Professional Profile Dp.jpg" alt=""></div>  
+         <div id="google-img"><img src="./images/google-img.png" alt=""></div>        
+         <form action="https://www.google.com/search">
+             <input  type="text" name="q" class="placehold">
+             <div id="btns">
+                 <input type="submit" value="Google Search" id="btn-search">
+                 <input type="submit" name="btnI" value="I'm Feeling Lucky" id="btn-search">
+             </div>
+         </form>    
         
     </div>
     <div id="footer">
