--- a/image.html
+++ b/image.html
@@ -24,10 +24,10 @@
             <img id="dpimg" style="width: 48px;height: 48px;padding: 8px;" src="./images/Professional Profile Dp.jpg" alt=""></div>  
          <div id="google-img"><img src="./images/google-img.png" alt=""></div>        
          <form action="https://www.google.com/search">
-             <input  type="text" name="q" class="placehold">
+                <input type="hidden" name="tbm" value="isch">
+                <input  type="text" name="q" class="placehold">
              <div id="btns">
-                 <input type="submit" value="Google Search" id="btn-search">
-                 <input type="submit" name="btnI" value="I'm Feeling Lucky" id="btn-search">
+                 <input type="submit" value="Search Images" id="btn-search">
              </div>
          </form>    
         
