--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                 <a href="https://github.com/saadkhan2003"><i class="ri-github-fill"  ></i></a>
                 <a href="https://instagram.com/saadkhnoff"><i class="ri-instagram-line"></i></a>
                 <a href="https://linkedin.com/saadkhan2003"><i class="ri-linkedin-fill"></i></a>
-                <a href="https://twitter.com/msaadkhan2003"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://twitter.com/saadkhnoff"><i class="ri-twitter-x-line"></i></a>
             </div>
             
         </div>
